deployments/k8-manifests/mysql-manifest.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  serviceName: mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: init-script-volume
          mountPath: /docker-entrypoint-initdb.d
      securityContext:
        runAsNonRoot: false
      volumes:
      - name: init-script
        configMap:
          name: mysql-init-script
      - name: init-script-volume
        emptyDir: {}
      affinity:
            nodeAffinity:
              requiredDuringSchedulingIgnoredDuringExecution:
                nodeSelectorTerms:
                - matchExpressions:
                  - key: type
                    operator: In
                    values:
                    - "ondemand"
