deployments/k8-manifests/prod-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-ingress
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: devsecops
  ingress:
  - from:
    - podSelector:
        matchLabels:
          istio: ingressgateway
